--- a/main.css
+++ b/main.css
@@ -1,22 +1,14 @@
+html, body {
+  padding: 0;
+  margin: 0;
+  width: 900px;
+  height: 550px;
+}
+
 div {
   display: flex;
   justify-content: center;
-  padding: 20px;
+  padding: 0px;
   flex-direction: column;
   align-items: center;
-}
-
-canvas {
-  border-radius: 10px;
-}
-
-p {
-  font-style: italic;
-  opacity: 0.5;
-  transition-duration: 1s;
-}
-
-p:hover,
-p:focus {
-  opacity: 1;
 }
